# alpharaw

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  bumpversion.cfg  pyproject.toml  requirements.txt  ruff-lint-strict.toml  settings.ini  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: _run_tests.yml  branch-checks.yaml  create_release.yml  pip_installation.yml  publish_and_release.yml  publish_on_pypi.yml
alpharaw/: __init__.py  _modidx.py  alphatims.py  bruker.py  centroiding.py  cli.py  deconvolution.py  ms_data_base.py  mzml.py  pysciexwifffilereader.py  pythermorawfilereader.py  sciex.py  smoothing.py  tempmmap.py  thermo.py
alpharaw/bruker/: __init__.py  ap_ff.py  dll.py  filtering.py  hdf.py  read.py  slice.py  spectrum.py  timstof.py  write.py
alpharaw/dia/: normal_dia.py
alpharaw/feature/: centroids.py  chem.py  finding.py  hills.py  isotope_pattern.py  performance.py
alpharaw/legacy_msdata/: mgf.py  mzml.py
alpharaw/match/: mass_calibration.py  match_utils.py  psm_match.py  psm_match_alphatims.py  spec_finder.py
alpharaw/mzml_io/: cv_constants.py  mzml_writer.py
alpharaw/raw_access/: clr_utils.py  pysciexwifffilereader.py  pythermorawfilereader.py
alpharaw/resources/: README.md
alpharaw/utils/: centroiding.py  df_processing.py  ms_path_utils.py  pjit.py  smoothing.py  timstof.py
alpharaw/viz/: df_utils.py  plot_utils.py  psm_plot.py  xic_plot.py  xic_plot_raw.py  xic_plot_tims.py
alpharaw/wrappers/: alphapept_wrapper.py  alphatims_wrapper.py
docs/: bruker.rst  build_docs.sh  conf.py  index.rst  match_modules.rst  reader_modules.rst  tutorials.rst  viz_modules.rst
docs/bruker/: bruker.md  timstof.rst
docs/match/: match_utils.rst  psm_match.rst  spec_finder.rst
docs/readers/: mgf.rst  mzml.rst  (+3 more)
extra_requirements/: development.txt  tests.txt  viz.txt
misc/: bumpversion.cfg  check_version.sh  loose_pip_install.sh  pip_install.sh  stable_pip_install.sh
nbdev_nbs/: index.ipynb  ms_data_base.ipynb  nbdev.yml  sciex.ipynb  sidebar.yml  test_mzml.ipynb  thermo.ipynb
nbs/: alpharaw_to_alphapept.ipynb  feature_finding.ipynb  psm_match_alphatims.ipynb  test_alphatims_wrapper.ipynb  test_centroiding.ipynb  test_dia_matching.ipynb  test_scanning_swath.ipynb  test_sciex.ipynb  test_thermo.ipynb  test_tims_match.ipynb  test_viz.ipynb  test_viz_multinotch.ipynb  tutorial.ipynb  tutorial_ms_methods.ipynb
nbs_tests/: feature_finding.ipynb  test_alphatims_wrapper.ipynb  test_scanning_swath.ipynb  test_sciex.ipynb  test_thermo.ipynb  test_viz_multinotch.ipynb
requirements/: requirements.txt  requirements_development.txt  requirements_loose.txt  requirements_owl.txt  requirements_owl_stable.txt  requirements_tests.txt  requirements_viz.txt
tests/: download_test_data.py  run_tests.sh  test_cli.py  test_gui.py
(+42 files in other folders)
